--- a/public/index.html
+++ b/public/index.html
@@ -18,4 +18,26 @@
     <div class="container">
         <div class="fortune-card">
             <h1>Digital Fortune Cookie</h1>
- 
+            <p class="subtitle">Crack open your digital fortune!</p>
+
+            <button id="generateButton" class="generate-btn">
+                <span class="button-content">
+                    🥠 Get Fortune
+                </span>
+            </button>
+
+            <div id="loadingIndicator" class="loading hidden">
+                <div class="spinner"></div>
+                Consulting the oracle...
+            </div>
+
+            <div id="fortuneDisplay" class="fortune-display hidden">
+                <pre id="asciiArt" class="ascii-art"></pre>
+                <div id="fortuneText" class="fortune-text"></div>
+            </div>
+        </div>
+    </div>
+    <script type="module" src="script.js"></script>
+</body>
+</html>
+
