--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Generative AI Prompt</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fortune Cookie Generator</title>
+    <meta name="description" content="A fun and whimsical fortune cookie generator">
+    <meta name="keywords" content="fortune, cookie, generator, humor, fun">
+    <meta name="author" content="Your Name">
+    <meta name="robots" content="index, follow">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <style>
+        body {
+            background-image: url('https://cloud-9f2z5k3c2-hack-club-bot.vercel.app/0image.png');
+            background-size: 20%;
+            background-position: center top;
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
 <body>
-  <div id="result"></div>
-
-  <script type="module">
-    async function fetchGenerativeResponse() {
-      const prompt = "Write a story about a magic backpack.";
-      const response = await fetch("/api/generate", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ prompt })
-      });
-      const data = await response.json();
-      document.getElementById("result").innerText = data.text || data.error;
-    }
-
-    fetchGenerativeResponse();
-  </script>
+    <div class="container">
+        <h1>Open Your Digital Fortune Cookie!</h1>
+        <p>Click the button below to receive a fortune and see what the future holds for you!</p>
+        <button id="fortuneButton">Give Me My Fortune!</button>
+        <div id="fortuneDisplay" class="fortune"></div>
+    </div>
+    <script type="importmap">
+      {
+        "imports": {
+          "@google/generative-ai": "https://esm.run/@google/generative-ai"
+        }
+      }
+    </script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
