--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <h1>Open Your Digital Fortune Cookie!</h1>
         <p>Click the button below to receive a fortune and see what the future holds for you!</p>
-        <button id="fortuneButton">Give Me My Fortune!</button>
+        <button id="fortuneButton">Give Me The Fortune!</button>
         <div id="fortuneDisplay" class="fortune"></div>
     </div>
     <script type="importmap">
